# OC4-classification

./: CLAUDE.md  README.md  main.py  pyproject.toml
notebooks/: 01_exploration.ipynb  02_modelisation copy 2.ipynb  02_modelisation.ipynb  Cell output 64 [DW].csv  X_test.joblib  X_train.joblib  dashboard_shap.py  log_reg_pipeline.joblib  shap_interactive.html  y_test.joblib
notebooks/exports/: dataset_export.csv
